# Awesome-Game-Analysis

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  TODO.md  contribution_guide.md  games.toml  generate.py  prompt  pyproject.toml  toml_markdown.py
.github/: pull_request_template.md
.github/workflows/: Awesome-Game-Analysis.yml  python-app.yml
data/: epilogue.md  games.toml  preface.md  references.md
scripts/: generate_contributors.py  requirements.txt  toml_formatter.py  toml_markdown.py
tests/: conftest.py  test_setup_validation.py
